# fy26-clientmonitoringv3

./: .gitignore  Cargo.toml  README.md  filesinwsl.txt  fy26-clientmonitoringv3.sln  run-all-tests.sh  run-demo-protocol.sh
.github/: copilot-instruction.md  copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/prompts/: plan-demoProtocolRunner.prompt.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
a-copilot-demos/: analyze-for-consistency.md  clarification-for-spec.md  implementation.md  tasks.md  update-plan.md
agent/: Cargo.toml  TESTS.md  pyproject.toml
agent/src/: demo_protocol.rs  lib.rs  main.rs  protocol.rs
agent/tests/: demo_protocol_producer_tests.rs  protocol_tests.rs
server/: MonitoringServer.csproj
server/DemoProtocolConsumer/: DemoProtocolConsumer.csproj  Program.cs
server/Protocol/: FrameCodec.cs  Messages.cs
server/Storage/: FileStorageWriter.cs  IStorageWriter.cs
server/Tests/: MonitoringServer.Tests.csproj
server/Tests/Protocol/: DemoProtocolDecodeLoopTests.cs  ProtocolTests.cs
server/Tests/Storage/: FileStorageTests.cs
specs/001-protocol-messaging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-protocol-messaging/checklists/: protocol.md  requirements.md
specs/001-protocol-messaging/contracts/: protocol-openapi.yaml
specs/002-demo-protocol/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-demo-protocol/checklists/: interop.md  requirements.md
(+1 files in other folders)
