[workspace]
members = ["agent"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Protocol & serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13"

# Time handling
chrono = "0.4"

# Testing
mockall = "0.12"
