[package]
name = "agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bincode.workspace = true
serde.workspace = true
zstd.workspace = true
chrono.workspace = true
thiserror = "2.0.17"

[dev-dependencies]
mockall.workspace = true

[lib]
name = "agent"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/main.rs"
